--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,19 @@ jar {
 }
 
 dependencies {
-    implementation 'com.google.code.gson:gson:2.9.0'
+
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+
     implementation 'io.javalin:javalin:4.6.4'
-    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.8.0-beta4'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    //implementation 'org.mongodb:mongodb-driver:3.12.11'
+
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.11'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.11'
+    implementation group: 'dev.morphia.morphia', name: 'morphia-core', version: '2.2.7'
 }
 
 test {
