--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
     mavenCentral()
 }
 
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
 jar {
     manifest {
         attributes 'Main-Class': 'cc.kocho.Main'
